sql/wsrep_server_state.cc
@@ -16,6 +16,7 @@
 #include "my_global.h"
 #include "wsrep_api.h"
 #include "wsrep_server_state.h"
+#include "wsrep_binlog.h" /* init/deinit group commit */
 
 mysql_mutex_t LOCK_wsrep_server_state;
 mysql_cond_t  COND_wsrep_server_state;
@@ -45,9 +46,10 @@ Wsrep_server_state::Wsrep_server_state(const std::string& name,
   , m_mutex(LOCK_wsrep_server_state)
   , m_cond(COND_wsrep_server_state)
   , m_service(*this)
-{
+{ }
 
-}
+Wsrep_server_state::~Wsrep_server_state()
+{ }
 
 void Wsrep_server_state::init_once(const std::string& name,
                                    const std::string& incoming_address,
